--- a/index.html
+++ b/index.html
@@ -686,11 +686,21 @@
             // Przenieś kalkulator do body i ustaw pozycję absolutną
             document.body.appendChild(calculatorBox);
             calculatorBox.classList.add('dragging');
-            const placeholderRect = calculatorPlaceholder.getBoundingClientRect();
-            currentX = (placeholderRect.left + window.scrollX);
-            currentY = (placeholderRect.top + window.scrollY);
-            calculatorBox.style.left = currentX + 'px';
-            calculatorBox.style.top = currentY + 'px';
+
+            // Ustaw pozycję początkową na podstawie aktualnej pozycji kalkulatora
+            if (calculatorBox.style.position === 'absolute') {
+                // Jeśli kalkulator jest już w trybie przeciągania, użyj jego aktualnej pozycji
+                currentX = parseFloat(calculatorBox.style.left) || 0;
+                currentY = parseFloat(calculatorBox.style.top) || 0;
+            } else {
+                // Jeśli dopiero zaczynamy przeciąganie, ustaw pozycję na podstawie placeholder'a
+                const placeholderRect = calculatorPlaceholder.getBoundingClientRect();
+                currentX = placeholderRect.left + window.scrollX;
+                currentY = placeholderRect.top + window.scrollY;
+                calculatorBox.style.left = currentX + 'px';
+                calculatorBox.style.top = currentY + 'px';
+            }
+
             initialX = e.clientX - currentX;
             initialY = e.clientY - currentY;
             calculatorBox.style.cursor = 'grabbing';
@@ -701,8 +711,8 @@
     document.addEventListener('mousemove', (e) => {
         if (isDragging) {
             e.preventDefault();
-            currentX = (e.clientX - initialX);
-            currentY = (e.clientY - initialY);
+            currentX = e.clientX - initialX;
+            currentY = e.clientY - initialY;
 
             const windowWidth = document.documentElement.scrollWidth;
             const calcWidth = calculatorBox.offsetWidth;
@@ -731,11 +741,21 @@
             // Przenieś kalkulator do body i ustaw pozycję absolutną
             document.body.appendChild(calculatorBox);
             calculatorBox.classList.add('dragging');
-            const placeholderRect = calculatorPlaceholder.getBoundingClientRect();
-            currentX = (placeholderRect.left + window.scrollX);
-            currentY = (placeholderRect.top + window.scrollY);
-            calculatorBox.style.left = currentX + 'px';
-            calculatorBox.style.top = currentY + 'px';
+
+            // Ustaw pozycję początkową na podstawie aktualnej pozycji kalkulatora
+            if (calculatorBox.style.position === 'absolute') {
+                // Jeśli kalkulator jest już w trybie przeciągania, użyj jego aktualnej pozycji
+                currentX = parseFloat(calculatorBox.style.left) || 0;
+                currentY = parseFloat(calculatorBox.style.top) || 0;
+            } else {
+                // Jeśli dopiero zaczynamy przeciąganie, ustaw pozycję na podstawie placeholder'a
+                const placeholderRect = calculatorPlaceholder.getBoundingClientRect();
+                currentX = placeholderRect.left + window.scrollX;
+                currentY = placeholderRect.top + window.scrollY;
+                calculatorBox.style.left = currentX + 'px';
+                calculatorBox.style.top = currentY + 'px';
+            }
+
             const touch = e.touches[0];
             initialX = touch.clientX - currentX;
             initialY = touch.clientY - currentY;
@@ -747,8 +767,8 @@
         if (isDragging) {
             e.preventDefault();
             const touch = e.touches[0];
-            currentX = (touch.clientX - initialX);
-            currentY = (touch.clientY - initialY);
+            currentX = touch.clientX - initialX;
+            currentY = touch.clientY - initialY;
 
             const windowWidth = document.documentElement.scrollWidth;
             const calcWidth = calculatorBox.offsetWidth;
@@ -777,6 +797,9 @@
         calculatorBox.style.position = 'static';
         calculatorBox.style.left = '';
         calculatorBox.style.top = '';
+        // Zresetuj pozycję
+        currentX = 0;
+        currentY = 0;
     });
 
     // Funkcja aktualizująca pozycję kalkulatora po zmianie zoomu
